--- a/english.html
+++ b/english.html
@@ -565,6 +565,8 @@ Error message and password prompt
 
 <li>Powders</li>
 
+<li>Pride here</li>
+
 <li>Prince</li>
 
 <li>Psychodiagnostic Chirology</li>
@@ -8599,7 +8601,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200220153356842" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200220154510173" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8608,7 +8610,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Pride here]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8628,7 +8630,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220152238054" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220154306513" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8989,7 +8991,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20200216150039212" modified="20200220153506091" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200220154522062" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -10855,6 +10857,23 @@ Egg powder? If by any chance you dropped an egg, let it dry, let the cat scratch
 
 
  &lt;&lt;heblink [[אבקות]]&gt;&gt;
+</pre>
+</div>
+<div created="20200220153930451" modified="20200220154602996" tags="[[Here in the Ghetto]] Metafiction [[Coffee shops]] [[On the road to somewhere]]" title="Pride here">
+<pre>
+[img[pictures/pride.jpg]]
+
+!!![[Tomer]]:
+
+I feel so proud of my ghetto, after Friday’s morning, when I walked calmly in the middle of scanning at [[Galsi]] and shopping at [[Shoretzky]], a lovely sight of the first proud walkers, who started to gather at the corner of Ben Zion boulevard and Habima square was revealed to me. I’m happy and feel fortunate.
+
+
+
+ &lt;&lt;heblink [[כאן גאווה]]&gt;&gt;
+
+
+
+
 </pre>
 </div>
 <div created="20200213204850477" modified="20200213212548516" tags="[[Outer sisters]] Music Films" title="Prince">
