--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220153112938" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220154006786" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9613,7 +9613,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200220153646402" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200220154355667" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -13602,13 +13602,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190616054408289" modified="20190620131612633" tags="[[כאן בגטו]]" title="כאן גאווה">
+<div created="20190616054408289" modified="20200220154453229" tags="[[כאן בגטו]] [[בתי קפה]] [[בדרך לאן שהוא]] [[מטא בדיון]]" title="כאן גאווה">
 <pre>[img[pictures/pride.jpg]]
 
 
 !!![[תומר]]:
 
-כמה אני גאה בגטו שלי, אחרי שבבוקר יום שישי, כשצעדתי רגוע  בין סריקות [[בגלסי|גלסי]] לקניות [[בשורצקי|שורצקי]], מראה מלבב של ראשוני הצועדים והצועדות, הגאים והגאות, שהתחילו להתאסף בפינת שדרות בן ציון והבימה ניגלה בפני. אני שמח וחש בר מזל.</pre>
+כמה אני גאה בגטו שלי, אחרי שבבוקר יום שישי, כשצעדתי רגוע  בין סריקות [[בגלסי|גלסי]] לקניות [[בשורצקי|שורצקי]], מראה מלבב של ראשוני הצועדים והצועדות, הגאים והגאות, שהתחילו להתאסף בפינת שדרות בן ציון והבימה ניגלה בפני. אני שמח וחש בר מזל.
+
+&lt;&lt;englink [[Pride here]]&gt;&gt;
+</pre>
 </div>
 <div created="20181001132342409" modified="20200212165900775" tags="[[כאן בגטו]] [[מטא בדיון]]" title="כביסה">
 <pre>[img[pictures/kevisa.jpg]]
