--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[יהודית רביץ]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220154006786" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220154733283" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12977,7 +12977,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Genevieve]]&gt;&gt;</pre>
 </div>
-<div created="20180927093957805" modified="20200220151135698" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[מטא בדיון]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="זמירות חג">
+<div created="20180927093957805" modified="20200220155653861" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[מטא בדיון]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="זמירות חג">
 <pre>[img[pictures/zemirot-chag.jpg]]
 
 !!![[תומר]]:
@@ -12985,7 +12985,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 חוהמ&quot;ס התשע&quot;ט, שעות אחר הצהריים, שפי נסעה עם ננו התינוקת המתוקה שלנו, ואני אמור להסתלבט וגם לעבוד, אבל אני יושב כמו אידיוט ושומע את נשיא ארה&quot;ב אומר דברים בעוד רוה&quot;מ שלנו יושב לידו ועף על החיים. לפתע קול שירת זמירות חג עולה מהסוכה שבחצר הבניין הסמוך, ומציל אותי. אני מחייך. קם. מציץ דרך התריס. נהנה. מצלם, ושולח [[לגורה|גורה]].
 
 
-&lt;&lt;englink [[  Holiday psalms ]]&gt;&gt;</pre>
+&lt;&lt;englink [[Holiday psalms]]&gt;&gt;</pre>
 </div>
 <div created="20170527175706471" modified="20200219191314177" tags="[[אירי טוענת]]" title="זקופי הגו">
 <pre>[img[pictures/zkufey-hagev.jpg]]
