--- a/english.html
+++ b/english.html
@@ -747,6 +747,8 @@ Error message and password prompt
 
 <li>Yehonatan Geffen</li>
 
+<li>Yehudit Ravitz</li>
+
 <li>Yoyo</li>
 
 <li>Yoyo and Gura</li>
@@ -8610,7 +8612,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Pride here]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Yehudit Ravitz]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8991,7 +8993,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20200216150039212" modified="20200220154522062" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200220160418912" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -11955,6 +11957,20 @@ I had doubts regarding [[Wyclef|https://www.imdb.com/name/nm0419889/]], cause he
 
  &lt;&lt;heblink [[יהונתן גפן]]&gt;&gt;
 </pre>
+</div>
+<div created="20200220155745745" modified="20200220160446036" tags="[[Here in the Ghetto]] Music [[Outer sisters]] [[How many songs can you even invent at all]] Metafiction" title="Yehudit Ravitz">
+<pre>
+[img[pictures/yehudit-ravitz.jpg]]
+
+
+!!![[Tomer]]:
+
+Today on the street, this [[permanently|https://www.youtube.com/watch?v=lt_C-vcDdU8]] wonderful [[singer|https://en.wikipedia.org/wiki/Yehudit_Ravitz]] passed by me, this one time beautiful [[musician|https://www.youtube.com/watch?v=YVQvOvlEcDM]] who I love and appreciate. The hinch of embarrassment and charm in her smile, they say she [[comes from love|https://www.youtube.com/watch?v=zUNPxTNxVoc]] and many more.
+
+
+
+
+ &lt;&lt;heblink [[יהודית רביץ]]&gt;&gt;</pre>
 </div>
 <div created="20200101132642919" modified="20200219124006769" tags="" title="Yoyo">
 <pre>[img[pictures/yoyo.jpg]]
