--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[יהודית רביץ]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9613,7 +9613,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200220154355667" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200220160513386" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -13436,13 +13436,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 התחברנו ממש, והיא אחות.</pre>
 </div>
-<div created="20190124084102212" modified="20200212144003581" tags="[[אחיות חוץ]] מוזיקה [[כאן בגטו]] [[מטא בדיון]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="יהודית רביץ">
+<div created="20190124084102212" modified="20200220160544409" tags="[[אחיות חוץ]] מוזיקה [[כאן בגטו]] [[מטא בדיון]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="יהודית רביץ">
 <pre>[img[pictures/yehudit-ravitz.jpg]]
 
 !!![[תומר]]:
 
 היום ברחוב, [[חלפה|https://he.wikipedia.org/wiki/%D7%99%D7%94%D7%95%D7%93%D7%99%D7%AA_%D7%A8%D7%91%D7%99%D7%A5]] על פני [[הזמרת|https://www.youtube.com/watch?v=lt_C-vcDdU8]] הנפלאה באופן קבוע, [[והמוזיקאית|https://www.youtube.com/watch?v=YVQvOvlEcDM]] החד פעמית והיפה הזו, שאני כל כך אוהב ומעריך. שמץ של מבוכה והקסם בחיוכה, אומרים [[שהיא באה מאהבה|https://www.youtube.com/watch?v=zUNPxTNxVoc]] ועוד המון.
 
+&lt;&lt;englink [[Yehudit Ravitz]]&gt;&gt;
 </pre>
 </div>
 <div created="20180325134055236" modified="20200217132400814" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="יהונתן גפן">
