--- a/english.html
+++ b/english.html
@@ -389,6 +389,8 @@ Error message and password prompt
 
 <li>Gigi</li>
 
+<li>Grey’s Anatomy</li>
+
 <li>Guan Fashion</li>
 
 <li>Guan-yin</li>
@@ -8612,7 +8614,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Yehudit Ravitz]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Grey’s Anatomy]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8632,7 +8634,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220154306513" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220161847228" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8993,7 +8995,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20200216150039212" modified="20200220160418912" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200220161647903" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -9684,6 +9686,22 @@ Gigi is part of The [[Emin Society|https://en.wikipedia.org/wiki/Emin_(esoteric_
  &lt;&lt;heblink [[גיגי]]&gt;&gt;
 
 
+</pre>
+</div>
+<div created="20200220161521230" modified="20200220162527887" tags="TV [[TV Series]] Mothers" title="Grey’s Anatomy">
+<pre>
+[img[pictures/greys-anatomy.jpg]]
+
+
+!!![[Yoyo]]:
+
+Each [[privileged|A Privileged Man]] on his own way. It’s obvious, that if you’re born white, pretty, attractive, intelligent, sexy and the daughter of the [[mythological Dr. Grey|https://www.imdb.com/name/nm0123632/?ref_=ttfc_fc_cl_t42]] and you came for an internship, nobody is going to be empathic of she not caring for you at all. [[It all begins|https://www.imdb.com/title/tt0413573/]] when [[Dr Meredith Grey|https://www.imdb.com/name/nm0690186/?ref_=tt_cl_t1]] came for an internship at Seattle Grace hospital, after a [[steaming hot night|https://www.youtube.com/watch?v=Fou8hTxSdxQ]], with, as it later turns out, [[McDreamy|https://www.imdb.com/name/nm0001131/?ref_=tt_cl_t5]] - the hot brain surgeon, who will be killed at the end of the 11th season through an entire episode.
+The most intimate conversations occur over ventilated patients, with sliced up bodies. [[Shonda|https://www.imdb.com/name/nm0722274/?ref_=nv_sr_1]] knows how to show the complexity of the human hierarchy, knocks us down when necessary and moves us. 
+
+
+
+
+ &lt;&lt;heblink [[האנטומיה של גריי]]&gt;&gt;
 </pre>
 </div>
 <div created="20200215203104172" modified="20200215203242855" tags="[[True stories]] Mothers" title="Guan Fashion">
