--- a/english.html
+++ b/english.html
@@ -8614,7 +8614,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Grey’s Anatomy]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The Wire]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8634,7 +8634,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220161847228" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220163141282" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11659,8 +11659,17 @@ When they talked about his mother- who demanded his extermination- [[Dr. Melfi|h
 
 </pre>
 </div>
-<div created="20200216170034035" modified="20200216170120018" tags="TV [[TV Series]]" title="The Wire">
+<div created="20200216170034035" modified="20200220163756543" tags="TV [[TV Series]]" title="The Wire">
 <pre>[img[pictures/the-wire.jpg]]
+
+
+
+!!![[Iry]]:
+
+What does [[Lester Freamon|]] think about when he builds miniature of ancient furniture? On [[the wire|https://www.imdb.com/title/tt0306414/]] obviously. And what’s up with [[Dukie|https://www.imdb.com/name/nm2369266/?ref_=ttfc_fc_cl_t32]], the [[wonder|https://www.youtube.com/watch?v=bqY7nfHBm24]] kid from the wonderful children’s group of season four? I recommend watching, even if from time to time your heart breaks. 
+
+
+
 
  &lt;&lt;heblink [[הסמויה]]&gt;&gt;</pre>
 </div>
