--- a/english.html
+++ b/english.html
@@ -373,6 +373,8 @@ Error message and password prompt
 
 <li>Fa</li>
 
+<li>Fargo</li>
+
 <li>Fauré's Requiem</li>
 
 <li>Films</li>
@@ -8605,7 +8607,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200220154510173" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200220164744590" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8614,7 +8616,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The Wire]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8634,7 +8636,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220163141282" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220164605418" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8995,7 +8997,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20200216150039212" modified="20200220161647903" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
+<div created="20200216150039212" modified="20200220164115627" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -9570,6 +9572,25 @@ There aren't enough words or space to describe the wonder of him and of the whol
 
 
  &lt;&lt;heblink [[פה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200220163951863" modified="20200220164753246" tags="TV [[TV Series]] Films" title="Fargo">
+<pre>
+[img[pictures/fargo.jpg]]
+
+
+!!![[Yoyo]]:
+
+It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best scene of the three truly excellent seasons of [[Fargo|https://www.imdb.com/title/tt2802850/]], which is like a takeoff of [[Fargo|https://www.imdb.com/title/tt0116282/]], a [[Coen brother’s|Ethan and Joel Coen]] movie, and actually, you can’t choose what’s best, but you can say that murders between trees, and murders anywhere, happen there.
+
+
+
+
+ &lt;&lt;heblink [[פארגו]]&gt;&gt;
+
+
+
+
 </pre>
 </div>
 <div created="20200219184944077" modified="20200219185100534" tags="Music [[How many songs can you even invent at all]] [[Iry claims]] [[On the road to somewhere]]" title="Fauré's Requiem">
@@ -11659,14 +11680,14 @@ When they talked about his mother- who demanded his extermination- [[Dr. Melfi|h
 
 </pre>
 </div>
-<div created="20200216170034035" modified="20200220163756543" tags="TV [[TV Series]]" title="The Wire">
+<div created="20200216170034035" modified="20200220164712674" tags="TV [[TV Series]]" title="The Wire">
 <pre>[img[pictures/the-wire.jpg]]
 
 
 
 !!![[Iry]]:
 
-What does [[Lester Freamon|]] think about when he builds miniature of ancient furniture? On [[the wire|https://www.imdb.com/title/tt0306414/]] obviously. And what’s up with [[Dukie|https://www.imdb.com/name/nm2369266/?ref_=ttfc_fc_cl_t32]], the [[wonder|https://www.youtube.com/watch?v=bqY7nfHBm24]] kid from the wonderful children’s group of season four? I recommend watching, even if from time to time your heart breaks. 
+What does [[Lester Freamon|https://www.imdb.com/name/nm0676370/?ref_=tt_cl_t9]] think about when he builds miniature of ancient furniture? On [[the wire|https://www.imdb.com/title/tt0306414/]] obviously. And what’s up with [[Dukie|https://www.imdb.com/name/nm2369266/?ref_=ttfc_fc_cl_t32]], the [[wonder|https://www.youtube.com/watch?v=bqY7nfHBm24]] kid from the wonderful children’s group of season four? I recommend watching, even if from time to time your heart breaks. 
 
 
 
