--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האנטומיה של גריי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220161546665" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220164008092" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9613,7 +9613,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200220161738388" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200220164225265" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -17159,12 +17159,16 @@ __אופן ההכנה____
 *לאפות ב-170 מעלות 40-50 דקות., עד שהבצק זהוב.
 </pre>
 </div>
-<div created="20170714125945456" modified="20190310195900211" tags="סדרות סרטים טלוויזיה" title="פארגו">
+<div created="20170714125945456" modified="20200220164817630" tags="סדרות סרטים טלוויזיה" title="פארגו">
 <pre>[img[pictures/fargo.jpg]]
 
 !!![[יויו]]:
 
 זה לא [[שזו|https://www.youtube.com/watch?v=KQb00kKRA08]] הסצנה הכי טובה בשלוש עונות מצויינות מכל בחינה של פארגו, שהיא סוג של טייק על [[פארגו הסרט|https://www.imdb.com/title/tt0116282/]] של האחים כהן, ובעצם אי אפשר לבחור מה הכי, אבל אפשר להגיד שרצח בינות לעצים ורציחות בכלל, קורות שם.
+
+
+
+&lt;&lt;englink [[Fargo]]&gt;&gt;
 
 </pre>
 </div>
