--- a/english.html
+++ b/english.html
@@ -729,6 +729,8 @@ Error message and password prompt
 
 <li>Wes Anderson</li>
 
+<li>what does a thing assemble</li>
+
 <li>When people were still optimistic</li>
 
 <li>When the cars were pretty</li>
@@ -8607,7 +8609,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200220164744590" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200220171116533" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8616,7 +8618,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[what does a thing assemble]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8636,7 +8638,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220164605418" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220171405751" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9092,7 +9094,7 @@ The idea of the blue marble is the continuation of Iry's thoughts of [[the villa
 
  &lt;&lt;heblink [[blue-marble-hood]]&gt;&gt;</pre>
 </div>
-<div created="20200217191013013" modified="20200217192054207" tags="[[The team]] [[Food addicts]] Recipes [[Vegan recipes]]" title="Bolognese-alike">
+<div created="20200217191013013" modified="20200220171436721" tags="[[The team]] [[Food addicts]] Recipes [[Vegan recipes]] [[what does a thing assemble]]" title="Bolognese-alike">
 <pre>[img[pictures/cmolonez.jpg]]
 
 
@@ -9604,8 +9606,16 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200212192057740" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200220171232192" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
+
+
+!!![[Yoyo]]:
+
+The best [[movie|https://en.wikipedia.org/wiki/Cinematography]] I’ve seen lately is [[Spike Lee’s|Spike Lee]] [[blaKkKlansma|https://www.imdb.com/title/tt7349662/]]. It happened about two weeks ago and I still recall it here and there and pleasures rushes through me. Right now it’s 2019. Everything changes all the time. You can have a flat screen and crazy sound system and happily sink in your bed and fly. 
+
+
+
 
 &lt;&lt;list-links filter:&quot;[tag[Films]]&quot;&gt;&gt;
 
@@ -11253,7 +11263,7 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 
  &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
 </div>
-<div created="20200215103830870" modified="20200215152213401" tags="[[Outer sisters]] Films" title="Spike Lee">
+<div created="20200215103830870" modified="20200220170140394" tags="[[Outer sisters]] Films Music" title="Spike Lee">
 <pre>[img[pictures/spike-lee.jpg]]
 
 !!![[Gura]]:
@@ -11883,6 +11893,26 @@ I love [[Wes Anderson|https://www.imdb.com/name/nm0027572/]], because he always 
  &lt;&lt;heblink [[וס אנדרסון]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20200220170928075" modified="20200220171440178" tags="[[Vegan recipes]] [[Food addicts]] Kitchens Recipes" title="what does a thing assemble">
+<pre>
+[img[pictures/lema-hadavar-dome.jpg]]
+
+
+
+!!![[The team]]:
+
+The devising of man’s mind are carnivore from his youth. He indeed discovered the fire and the knife, his fangs shortened, but he suffered of austerity. He regained his composure, and decided to have mercy on wild animals and pets, or at least parts of it.
+And what about the trees? Aren't they in pain? And the tomatoes? Don't they bleed? Or get hurt? Or
+In his longing he dreamt on substitutes: bolonasalike, like schnitzel, chilli as carne, eggplants that taste like liver, liver tasted zucchinis, mushrooms hamburger...
+And the mushrooms? Aren't they in pain?
+
+
+&lt;&lt;list-links filter:&quot;[tag[what does a thing assemble]]&quot;&gt;&gt;
+
+
+
+ &lt;&lt;heblink [[למה הדבר דומה]]&gt;&gt;</pre>
 </div>
 <div created="20200215164420935" modified="20200215165518955" tags="Once" title="When people were still optimistic">
 <pre>''They used to wave hi to each other''
