--- a/english.html
+++ b/english.html
@@ -8609,7 +8609,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200220171116533" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200220172122827" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8618,7 +8618,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[what does a thing assemble]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8638,7 +8638,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220171405751" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220171840466" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9260,8 +9260,7 @@ coming soon as possible
 </pre>
 </div>
 <div created="20200220153427025" modified="20200220153617910" tags="[[The kitchen by Genevieve]] Kitchens" title="Cleaning properly">
-<pre>
-[img[pictures/menakim-heytev.jpg]]
+<pre>[img[pictures/menakim-heytev.jpg]]
 
 
 
@@ -9577,8 +9576,7 @@ There aren't enough words or space to describe the wonder of him and of the whol
 </pre>
 </div>
 <div created="20200220163951863" modified="20200220165759047" tags="TV [[TV Series]] Films" title="Fargo">
-<pre>
-[img[pictures/fargo.jpg]]
+<pre>[img[pictures/fargo.jpg]]
 
 
 !!![[Yoyo]]:
@@ -9606,7 +9604,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200220171232192" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200220171727953" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -9720,8 +9718,7 @@ Gigi is part of The [[Emin Society|https://en.wikipedia.org/wiki/Emin_(esoteric_
 </pre>
 </div>
 <div created="20200220161521230" modified="20200220162527887" tags="TV [[TV Series]] Mothers" title="Grey’s Anatomy">
-<pre>
-[img[pictures/greys-anatomy.jpg]]
+<pre>[img[pictures/greys-anatomy.jpg]]
 
 
 !!![[Yoyo]]:
@@ -9852,8 +9849,7 @@ On these winter days, at the afternoon, many times I walk with [[little Nano|Nan
 </pre>
 </div>
 <div created="20200220151433589" modified="20200220153557162" tags="[[Dreams that we've dreamt]] Kitchens" title="Hand activator">
-<pre>
-[img[pictures/mafil-yad.jpg]]
+<pre>[img[pictures/mafil-yad.jpg]]
 
 
 !!![[Yoyo]]:
@@ -9923,8 +9919,7 @@ The only thing that I'm missing here [[in the ghetto|https://www.youtube.com/wat
 </pre>
 </div>
 <div created="20200220150514247" modified="20200220151401606" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Metafiction [[True stories]]" title="Holiday psalms">
-<pre>
-[img[pictures/zemirot-chag.jpg]]
+<pre>[img[pictures/zemirot-chag.jpg]]
 
 
 !!![[Tomer]]:
@@ -10911,8 +10906,7 @@ Egg powder? If by any chance you dropped an egg, let it dry, let the cat scratch
 </pre>
 </div>
 <div created="20200220153930451" modified="20200220154602996" tags="[[Here in the Ghetto]] Metafiction [[Coffee shops]] [[On the road to somewhere]]" title="Pride here">
-<pre>
-[img[pictures/pride.jpg]]
+<pre>[img[pictures/pride.jpg]]
 
 !!![[Tomer]]:
 
@@ -11682,8 +11676,17 @@ When they talked about his mother- who demanded his extermination- [[Dr. Melfi|h
 
 </pre>
 </div>
-<div created="20200202164120005" modified="20200202164704589" tags="[[Coen sister]] [[The archive's trustees]] [[Food addicts]]" title="The team">
-<pre>[img[pictures/hazevet.jpg]]
+<div created="20200202164120005" modified="20200220172230172" tags="[[Coen sister]] [[The archive's trustees]] [[Food addicts]]" title="The team">
+<pre>
+[img[pictures/hazevet.jpg]]
+
+
+The team is us, who live in the renovated rental contract [[apartment|the wishing star 01]], meaning [[Yoyo]], [[Iry]] and [[Gura]], that in our leisure hours we bake, cook and also write the recipes.
+
+
+&lt;&lt;list-links filter:&quot;[tag[The team]]&quot;&gt;&gt;
+
+
 
  &lt;&lt;heblink [[הצוות]]&gt;&gt;
 
@@ -11895,8 +11898,7 @@ I love [[Wes Anderson|https://www.imdb.com/name/nm0027572/]], because he always 
 </pre>
 </div>
 <div created="20200220170928075" modified="20200220171440178" tags="[[Vegan recipes]] [[Food addicts]] Kitchens Recipes" title="what does a thing assemble">
-<pre>
-[img[pictures/lema-hadavar-dome.jpg]]
+<pre>[img[pictures/lema-hadavar-dome.jpg]]
 
 
 
@@ -12037,8 +12039,7 @@ I had doubts regarding [[Wyclef|https://www.imdb.com/name/nm0419889/]], cause he
 </pre>
 </div>
 <div created="20200220155745745" modified="20200220160446036" tags="[[Here in the Ghetto]] Music [[Outer sisters]] [[How many songs can you even invent at all]] Metafiction" title="Yehudit Ravitz">
-<pre>
-[img[pictures/yehudit-ravitz.jpg]]
+<pre>[img[pictures/yehudit-ravitz.jpg]]
 
 
 !!![[Tomer]]:
