--- a/english.html
+++ b/english.html
@@ -8618,7 +8618,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[what does a thing assemble]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[what does a thing assemble]] [[the wishing star 01]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11897,7 +11897,7 @@ I love [[Wes Anderson|https://www.imdb.com/name/nm0027572/]], because he always 
 
 </pre>
 </div>
-<div created="20200220170928075" modified="20200220173155014" tags="[[Vegan recipes]] [[Food addicts]] Kitchens Recipes" title="what does a thing assemble">
+<div created="20200220170928075" modified="20200220173359063" tags="[[Vegan recipes]] [[Food addicts]] Kitchens Recipes" title="what does a thing assemble">
 <pre>[img[pictures/lema-hadavar-dome.jpg]]
 
 
@@ -11908,7 +11908,7 @@ The devising of man’s mind are carnivore from his youth. He indeed discovered 
 
 And what about the trees? Aren't they in pain? And the tomatoes? Don't they bleed? Or get hurt? 
 
-In his longing he dreamt on [[substitutes|the wishing star 01]]: bolonasalike, like schnitzel, chilli as carne, eggplants that taste like liver, liver tasted zucchinis, mushrooms hamburger...
+In his longing he dreamt on [[substitutes|https://www.youtube.com/watch?v=o8VObwbShjg]]: bolonasalike, like schnitzel, chilli as carne, eggplants that taste like liver, liver tasted zucchinis, mushrooms hamburger...
 
 And the mushrooms? Aren't they in pain?
 
