--- a/index.html
+++ b/index.html
@@ -9172,10 +9172,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200220063600793" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20200220174001870" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200220064106268" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200220174004046" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[למה הדבר דומה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="בבוקר [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220170921772" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220174324525" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9613,7 +9613,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200220171314646" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200220174518751" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10640,12 +10640,16 @@ well,
 
 </pre>
 </div>
-<div created="20170618162529875" modified="20190408153034088" tags="[[המטבח על פי ז'נבייב]] קפה" title="בבוקר">
+<div created="20170618162529875" modified="20200220174556715" tags="[[המטבח על פי ז'נבייב]] קפה" title="בבוקר">
 <pre>[img[pictures/genevieve-aruchat-boker.jpg]]
 
 !!![[ז'נבייב]]:
 
 אם קורה שאני לא אוכלת בבוקר [[קרואסון|טורט]] כלשהו ושותה [[קפה|הספלים מהם אנו שותים]], אני כל היום כמו תינוק שפסח על שלב הזחילה, [[המוטוריקה|https://he.wikipedia.org/wiki/%D7%94%D7%9E%D7%A2%D7%A8%D7%9B%D7%AA_%D7%94%D7%9E%D7%95%D7%98%D7%95%D7%A8%D7%99%D7%AA]] שלי משתבשת.
+
+
+
+&lt;&lt;englink [[In the morning]]&gt;&gt;
 </pre>
 </div>
 <div created="20170811181124336" modified="20200215123714733" tags="[[סיפורים אמיתיים]] [[דןדן נסע]] בתים [[חלומות שחלמנו]] כביסה" title="בבית של פיני">
@@ -14882,7 +14886,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [img[pictures/lily-17-1.jpg]]
 </pre>
 </div>
-<div created="20191023054233757" modified="20191023063307278" tags="[[קופים ממונעים]] סרטים" title="לימונים">
+<div created="20191023054233757" modified="20200220174211780" tags="[[קופים ממונעים]] סרטים" title="לימונים">
 <pre>[img[pictures/lemons.jpg]]
 
 !!![[גורה]]:
@@ -14891,9 +14895,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אמר הלימון
 
-לא רוצה להיות לימונדה, יש סוכר בחמיצות שלי , כמו השמחה בעצב של ואן-גוך, ואני לא רוצה כל כך מהר לא להיות, רוצה לחיות, רוצה לחיות
+לא רוצה להיות לימונדה, יש סוכר בחמיצות שלי , כמו השמחה בעצב של [ואן-גוך, ואני לא רוצה כל כך מהר לא להיות, רוצה לחיות, רוצה לחיות
 
-(ציור של [[ואן גוך|וינסנט ואן-גוך]], שציירתי אחרי שצפיתי בסרט היפה [[ואן גוך: בשערי הנצח|https://www.imdb.com/title/tt6938828/]])</pre>
+(ציור של [[ואן גוך|וינסנט ואן-גוך]], שציירתי אחרי שצפיתי בסרט היפה [[ואן גוך: בשערי הנצח|https://www.imdb.com/title/tt6938828/]])
+
+
+
+&lt;&lt;englink [[Lemons]]&gt;&gt;
+</pre>
 </div>
 <div created="20180429132711538" modified="20200220171348406" tags="[[חיות אוכל]] [[מתכונים טבעוניים]] מתכונים מטבחים" title="למה הדבר דומה">
 <pre>[img[pictures/lema-hadavar-dome.jpg]]
