--- a/english.html
+++ b/english.html
@@ -439,6 +439,8 @@ Error message and password prompt
 
 <li>In the Animal Farm</li>
 
+<li>In the morning</li>
+
 <li>Iris</li>
 
 <li>Iris the daughter</li>
@@ -484,6 +486,8 @@ Error message and password prompt
 <li>Lehamim</li>
 
 <li>Lemon cookies</li>
+
+<li>Lemons</li>
 
 <li>Less is more</li>
 
@@ -8609,7 +8613,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200220172122827" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200220174848452" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8618,7 +8622,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[what does a thing assemble]] [[the wishing star 01]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8638,7 +8642,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220171840466" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220174750578" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9604,7 +9608,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200220171727953" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200220174434619" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -10057,6 +10061,21 @@ Yes you- killing machines, exterminating and cancelling all that's not in your f
 
 </pre>
 </div>
+<div created="20200220174310066" modified="20200220174845695" tags="[[The kitchen by Genevieve]] Coffee Baking" title="In the morning">
+<pre>
+[img[pictures/genevieve-aruchat-boker.jpg]]
+
+
+
+!!![[Genevieve]]:
+
+If I don't eat [[some sort of|Torte]] croissant in the morning and drink [[coffee|The cups we're drinking from]] for some reason, all day long I'm like a baby who skipped crawling stage, my [[motor|https://en.wikipedia.org/wiki/Motor_system]] skills are wrong.
+
+
+
+ &lt;&lt;heblink [[בבוקר]]&gt;&gt;
+</pre>
+</div>
 <div created="20200217180444278" modified="20200217181125602" tags="[[The estate]]" title="Iris">
 <pre>[img[pictures/iris.jpg]]
 
@@ -10335,6 +10354,26 @@ Another [[neighborhood luck|https://www.google.co.il/maps/uv?hl=iw&amp;pb=!1s0x1
 
  &lt;&lt;heblink [[עוגיות חמאה ולימון]]&gt;&gt;
 
+</pre>
+</div>
+<div created="20200220173518816" modified="20200220174159196" tags="Films [[Monkeys with car keys]]" title="Lemons">
+<pre>
+[img[pictures/lemons.jpg]]
+
+
+!!![[Gura]]:
+
+Please don't squeeze me all!
+
+Said the lemon
+
+Don't want to be a lemonade, I've got sugar in my bitterness, like the happiness in Van Goch's agony, and I don't want that fast no to be, want to live, want to live
+
+([[Van Goch's|Vincent Van Gogh]] painting, which I drew after watching the beautiful [[AT ETERNITY'S GATE|https://www.imdb.com/title/tt6938828/]])
+
+
+
+ &lt;&lt;heblink [[לימונים]]&gt;&gt;
 </pre>
 </div>
 <div created="20200215225741395" modified="20200219132954190" tags="Kitchens [[The kitchen by Genevieve]]" title="Less is more">
