--- a/english.html
+++ b/english.html
@@ -8642,7 +8642,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220174750578" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220175419917" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10513,8 +10513,28 @@ And tea is for the sicken ones.
 
  &lt;&lt;heblink [[ארוחות]]&gt;&gt;</pre>
 </div>
-<div created="20200202175811447" modified="20200202180131685" tags="[[Outer sisters]] Music" title="Meir Ariel">
+<div created="20200202175811447" modified="20200220180024985" tags="[[Outer sisters]] Music" title="Meir Ariel">
 <pre>[img[pictures/0bBcnTVPP0ggEKv3.jpg]]
+
+
+
+//
+I pick a positive afternoonת  go to the port//
+
+//on the way I tell myself: we'll have to be rehabilitated from this too//
+
+//myself tells me as we arrive: so let's start training every day //
+
+meaning
+
+[[Terminal Lumintal|https://www.youtube.com/watch?v=GME1UyUpMPU]]
+
+meaning 
+
+[[The saint Meir Ariel|https://en.wikipedia.org/wiki/Meir_Ariel]], may he rest in peace.
+
+
+
 
 
  &lt;&lt;heblink [[מאיר אריאל]]&gt;&gt;
