--- a/english.html
+++ b/english.html
@@ -8613,7 +8613,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200220174848452" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200220181717449" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8622,7 +8622,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[A politician]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8642,7 +8642,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220175419917" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220181259552" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8854,8 +8854,15 @@ With the assistance of the code she has transplanted in my father, in me and in 
 
 </pre>
 </div>
-<div created="20200202185308186" modified="20200202185632492" title="A politician">
+<div created="20200202185308186" modified="20200220181623626" tags="[[Monkeys with car keys]]" title="A politician">
 <pre>[img[pictures/politician.jpg]]
+
+
+!!![[Gura]]:
+
+As for this moment, we would say that a politician is:
+
+[[addicted to power|https://www.youtube.com/watch?v=yb2rkbHXtow]], [[in a never ending ego trip|Horses to Glue]]. 
 
 
 
@@ -9280,7 +9287,7 @@ coming soon as possible
 
 </pre>
 </div>
-<div created="20180915085721246" modified="20200202190736797" tags="[[Monkeys with car keys]] [[Outer sisters]]" title="Coen Sisters">
+<div created="20180915085721246" modified="20200220181714788" tags="[[Monkeys with car keys]] [[Outer sisters]]" title="Coen Sisters">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -12078,13 +12085,13 @@ In [[my name|Wyclef Jean]] and in [[Wyclef Jean's name|https://www.youtube.com/w
 
 </pre>
 </div>
-<div created="20200213170826128" modified="20200216171644894" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Wyclef Jean">
+<div created="20200213170826128" modified="20200220181652289" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Wyclef Jean">
 <pre>[img[pictures/wyclef-jean.jpg]]
 
 
 !!![[Gura]]:
 
-I had doubts regarding [[Wyclef|https://www.imdb.com/name/nm0419889/]], cause he's also a politician, which is kind of [[wrong livelihood|https://en.wikipedia.org/wiki/Noble_Eightfold_Path]], but with that being said he was with [[Lauryni|Lauryn Hill]] at the [[Fugees|https://www.imdb.com/name/nm2131536/?ref_=nm_ov_bio_lk2]].
+I had doubts regarding [[Wyclef|https://www.imdb.com/name/nm0419889/]], cause he's also a [[politician|A politician]], which is kind of [[wrong livelihood|https://en.wikipedia.org/wiki/Noble_Eightfold_Path]], but with that being said he was with [[Lauryni|Lauryn Hill]] at the [[Fugees|https://www.imdb.com/name/nm2131536/?ref_=nm_ov_bio_lk2]].
 
 
 
