--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220175632439" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220180828023" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -17278,7 +17278,7 @@ __אופן ההכנה____
 &lt;&lt;englink [[Rice Pudding]]&gt;&gt;
 </pre>
 </div>
-<div created="20170419212629057" modified="20200202191428063" title="פוליטיקאי">
+<div created="20170419212629057" modified="20200220181734317" tags="[[קופים ממונעים]]" title="פוליטיקאי">
 <pre>[img[pictures/politician.jpg]]
 
 
