--- a/english.html
+++ b/english.html
@@ -8642,7 +8642,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220181259552" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220181857632" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9137,8 +9137,40 @@ When a Coen sister is asked what kind of animal is she, she immediately answers-
 
 </pre>
 </div>
-<div created="20200215215749574" modified="20200215220014963" tags="[[Food addicts]] Recipes [[Vegan recipes]]" title="Cauliflower in a frying Pan">
+<div created="20200215215749574" modified="20200220182237439" tags="[[Food addicts]] Recipes [[Vegan recipes]]" title="Cauliflower in a frying Pan">
 <pre>[img[pictures/kruvit-bamachvat.jpg]]
+
+
+!!![[Yoyo]]:
+
+This week I recalled this option, of grilling a cauliflower in a reasonable amount of olive oil and garlic, squeezing lemon on top.
+
+•	a whole cauliflower
+
+•	three garlic cloves
+
+•	olive oil 
+
+•	see salt
+
+•	pinch of black pepper
+
+•	juice from quarter to half a lemon
+
+•	spoon to three spoons of raw tahini
+  
+
+1.	cook a whole cauliflower in a pot until the stem softens, filter it and let it cool
+
+2.	dissemble the cauliflower to little flowers
+
+3.	preheat a pan over a small flame, and 
+add quarter cup of olive oil and three sliced garlic cloves
+
+4.	roast the garlic, and when it begins to get goldish, add the cauliflower and roast it for a (relatively) long time, swirl gently once in a while- until the cauliflower gets a goldish color (about 40 minutes).
+
+5.	when the cauliflower is roasted transfer it to a bowl. Squeeze a quarter to half a lemon on it, black pepper, adorn with a spoon to three spoons of tahini and serve.   
+
 
 
  &lt;&lt;heblink [[כרובית במחבת]]&gt;&gt;
