--- a/english.html
+++ b/english.html
@@ -8613,7 +8613,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200220181717449" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200220182832636" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8622,7 +8622,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[A politician]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Ethan and Joel Coen]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8642,7 +8642,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220181857632" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220182803729" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9538,8 +9538,16 @@ Sherlock, in the Jonny Lee Miller version, watches seven screens at the same tim
 
  &lt;&lt;heblink [[אלמנטרי]]&gt;&gt;</pre>
 </div>
-<div created="20200202170301933" modified="20200202170459823" tags="[[Outer sisters]] Films" title="Ethan and Joel Coen">
+<div created="20200202170301933" modified="20200220182830092" tags="[[Outer sisters]] Films" title="Ethan and Joel Coen">
 <pre>[img[pictures/cohen-brothers.jpg]]
+
+
+!!![[Gura]]:
+
+The brothers [[Ethan and Joel Coen|https://en.wikipedia.org/wiki/Coen_brothers]], which [[Yoyo]] adopted in the beginning of the millennium, and turned them into his brothers, and himself into [[Eva Coen]], their sister- who is a Hungarian pastry cook, were the foundation of the sisters.
+He's definitely not the only one who [[loves them|Fargo]] and their [[wonderful mind|The Big Lebowski]]. 
+
+
 
 
  &lt;&lt;heblink [[איתן וג'ואל כהן]]&gt;&gt;
