--- a/index.html
+++ b/index.html
@@ -9175,7 +9175,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200220174001870" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200220174004046" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200220183115758" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[איתן וג'ואל כהן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220180828023" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220183112151" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9685,7 +9685,7 @@ well,
 &lt;&lt;englink [[Eva]]&gt;&gt;
 </pre>
 </div>
-<div created="20161215192348716" modified="20200115151207745" tags="[[אחות כהן]] אימהות" title="אווה כהן">
+<div created="20161215192348716" modified="20200220182929678" tags="[[אחות כהן]] אימהות" title="אווה כהן">
 <pre>[img[pictures/eva-coen.jpg]]
 
 
@@ -10340,12 +10340,12 @@ well,
 
 &lt;&lt;englink [[Iris the daughter]]&gt;&gt;</pre>
 </div>
-<div created="20170415200315789" modified="20200202171642038" tags="[[אחיות חוץ]] סרטים" title="איתן וג'ואל כהן">
+<div created="20170415200315789" modified="20200220183101916" tags="[[אחיות חוץ]] סרטים" title="איתן וג'ואל כהן">
 <pre>[img[pictures/cohen-brothers.jpg]]
 
 !!![[גורה]]:
 
-  [[האחים איתן וג'ואל כהן|https://he.wikipedia.org/wiki/%D7%94%D7%90%D7%97%D7%99%D7%9D_%D7%9B%D7%94%D7%9F]], שיויו אימץ בתחילת שנות האלפיים, והפך אותם לאחיו, ואת עצמו [[לאווה כהן|אווה]], אחותם - שהיא קונדיטורית הונגריה, היו [[ראשית האחיות|המעבדה]].
+  [[האחים איתן וג'ואל כהן|https://he.wikipedia.org/wiki/%D7%94%D7%90%D7%97%D7%99%D7%9D_%D7%9B%D7%94%D7%9F]], שיויו אימץ בתחילת שנות האלפיים, והפך אותם לאחיו, ואת עצמו [[לאווה כהן|אווה כהן]], אחותם - שהיא קונדיטורית הונגריה, היו [[ראשית האחיות|המעבדה]].
 
 הוא לגמרי לא [[היחידי שמת עליהם|פארגו]] ועל [[הראש הנפלא שלהם|ביג לבובסקי]].
 
