--- a/english.html
+++ b/english.html
@@ -8613,7 +8613,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200220183353121" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200220184158959" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8622,7 +8622,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Food addicts]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8642,7 +8642,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220183220340" title="$:/temp/search">
+<div created="20161023184814872" modified="20200220184111201" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8915,14 +8915,14 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
  &lt;&lt;heblink [[אלכסנדרה]]&gt;&gt;</pre>
 </div>
-<div created="20200215135137601" modified="20200215212713047" tags="[[Coen sister]] [[Single parent children]] [[I would like to apologize]]" title="Alfred">
+<div created="20200215135137601" modified="20200220184202345" tags="[[Coen sister]] [[Single parent children]] [[I would like to apologize]]" title="Alfred">
 <pre>[img[pictures/alfred.jpg]]
 
 !!![[Gura]]:
 
 Some things take time. It took me a while to be able to try painting Alfred and writing about him, but Alfred is an inseparable part of my life and [[our life|Coen Sisters]]. When he walks into a room, a warm kind cloud comes along. He [[suffered|Dangerous]] many times during his life, and still, he stayed a man with a pure heart.
 
-We met in Paris, in theater studies. We became a couple. I wanted him so badly, he left me, I got hurt, we came back, I got wounded, I was in coma, I woke up from the coma three weeks later, dumped him, [[Yoyo]] kept in touch with him, [[our mother|Yoyo and Gura]] passed away, Dandan and I went to India to bring [[Iry]] back, we came back, we moved into [[the apartment|the wishing star 01]], I forgave Alfred, things were good, [[Dandan went]], I fell apart again, he carefully watched over me, also his [[dad|Jozef Abaroa]].
+We met in Paris, in theater studies. We became a couple. I wanted him so badly, he left me, I got hurt, we came back, I got wounded, I was in coma, I woke up from the coma three weeks later, dumped him, [[Yoyo]] kept in touch with him, [[our mother|Yoyo and Gura]] passed away, Dandan and I [[went to India|Searching for Iry]] to bring [[Iry]] back, we came back, we moved into [[the apartment|the wishing star 01]], I forgave Alfred, things were good, [[Dandan went]], I fell apart again, he carefully watched over me, also his [[dad|Jozef Abaroa]].
 
 He's smart, talented, diligent, curious, he smiles a lot- even though I chose to paint him focused on the computer and not smiling. He's not aware of his own esteem, including not knowing how hot he is. 
 
