--- a/english.html
+++ b/english.html
@@ -507,6 +507,8 @@ Error message and password prompt
 
 <li>Matza ball soup</li>
 
+<li>Me writing</li>
+
 <li>Meals</li>
 
 <li>Meir Ariel</li>
@@ -8613,7 +8615,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200220184158959" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200222180658130" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9655,7 +9657,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200220174434619" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200222180355473" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -9816,7 +9818,7 @@ She's one of the lucky fellows who were raised together in a group, who came fro
 
 </pre>
 </div>
-<div created="20200202161830591" modified="20200219130028956" tags="[[Coen sister]] Laundry [[The Baumans]] [[The archive's trustees]]" title="Gura">
+<div created="20200202161830591" modified="20200222180701116" tags="[[Coen sister]] Laundry [[The Baumans]] [[The archive's trustees]]" title="Gura">
 <pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
 
 !!![[Yoyo]]:
@@ -9831,7 +9833,7 @@ She's the youngest daughter of my parents, [[Dina|RIP Dina]] may she rest in pea
  
 After she got injured she read and wrote all the time.
 
-Also now, since I've opened this site, she hasn't stopped writing, filling and decorating and trying to act properly. 
+Also now, since I've opened this site, she hasn't stopped [[writing|Me writing]], filling and decorating and trying to act properly. 
 
 
 
@@ -10554,6 +10556,20 @@ And tea is for the sicken ones.
 
 
  &lt;&lt;heblink [[מרק עם קניידלך]]&gt;&gt;
+</pre>
+</div>
+<div created="20200222180211144" modified="20200222180600494" tags="[[I would like to apologize]] Laundry [[Dandan went]] [[True stories]]" title="Me writing">
+<pre>
+[img[pictures/dAslRkCtpSF1J4AA.jpg]]
+
+
+!!![[Gura]]:
+
+
+
+
+
+ &lt;&lt;heblink [[הכתיבה]]&gt;&gt;
 </pre>
 </div>
 <div created="20200213154636920" modified="20200213161123485" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]]" title="Meals">
