--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[איתן וג'ואל כהן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200220183112151" title="$:/temp/search">
+<div created="20161023184814872" modified="20200222180203277" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9613,7 +9613,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200220174518751" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200222180436826" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12481,7 +12481,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[The global village]]&gt;&gt;</pre>
 </div>
-<div created="20170325162001136" modified="20181001132752031" tags="[[סיפורים אמיתיים]] [[דןדן נסע]] [[אני רוצה להתנצל]] כביסה" title="הכתיבה">
+<div created="20170325162001136" modified="20200222180459031" tags="[[סיפורים אמיתיים]] [[דןדן נסע]] [[אני רוצה להתנצל]] כביסה" title="הכתיבה">
 <pre>[img[pictures/dAslRkCtpSF1J4AA.jpg]]
 
 !!![[גורה]]:
@@ -12503,7 +12503,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 
-
+&lt;&lt;englink [[Me writing]]&gt;&gt;
 </pre>
 </div>
 <div created="20190210161447471" modified="20200219153717011" tags="[[כאן בגטו]] [[מטא בדיון]] [[סיפורים אמיתיים]]" title="המגדלור">
