--- a/english.html
+++ b/english.html
@@ -507,6 +507,8 @@ Error message and password prompt
 
 <li>Matza ball soup</li>
 
+<li>Max 20</li>
+
 <li>Me writing</li>
 
 <li>Meals</li>
@@ -8626,7 +8628,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Jazz [[Pele Ozen]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Max 20]] Jazz [[Pele Ozen]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9659,7 +9661,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200223145556015" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200223150130638" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -10561,6 +10563,18 @@ And tea is for the sicken ones.
 
 
  &lt;&lt;heblink [[מרק עם קניידלך]]&gt;&gt;
+</pre>
+</div>
+<div created="20200223150041518" modified="20200223152210190" tags="[[Here in the Ghetto]]" title="Max 20">
+<pre>
+[img[pictures/max20.jpg]]
+
+!!![[Tomer]]:
+
+Max 20 at 147 Yehuda haLevi st is just like a private storeroom. I leave the building and walk up to haHashmonaim st, turn right, cross, walk down couple of steps, and I've  got anything I need at maximum 20 shekels.
+
+
+ &lt;&lt;heblink [[max 20]]&gt;&gt;
 </pre>
 </div>
 <div created="20200222180211144" modified="20200222180600494" tags="[[I would like to apologize]] Laundry [[Dandan went]] [[True stories]]" title="Me writing">
